--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "@nuxt/fonts": "^0.13.0",
     "@nuxt/image": "^2.0.0",
     "@nuxtjs/seo": "^3.4.0",
-    "@tailwindcss/vite": "^4.1.18",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.0",
-    "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
@@ -30,6 +29,7 @@
     "@nuxt/hints": "^1.0.0-alpha.6",
     "@nuxt/scripts": "^0.13.2",
     "eslint": "^9.39.2",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3",
     "vite-plugin-eslint2": "^5.0.4",
     "vue-tsc": "^3.2.4"
