--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/content": "^3.11.0",
     "@nuxt/fonts": "^0.13.0",
     "@nuxt/image": "^2.0.0",
+    "@nuxtjs/i18n": "^10.2.1",
     "@nuxtjs/seo": "^3.4.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "better-sqlite3": "^12.6.2",
