--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "better-sqlite3": "^12.6.2",
     "nuxt": "^4.3.0",
+    "reka-ui": "^2.8.0",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
